Fix: adjusted letter spacing in heat text

--- a/src/scss/_heroBanner.scss
+++ b/src/scss/_heroBanner.scss
@@ -17,6 +17,7 @@
             .heatText {
                 font-size: 1.4rem;
                 font-weight: 700;
+                letter-spacing: 0.3rem;
                 text-transform: uppercase;
                 color: $brand-green;
                 margin-bottom: 1.6rem;
